objects/CRMDB__c.object
<CustomObject>
    <fields>
        <fullName>Accomplishments__c</fullName>
        <description>THIS IS BEING USED FOR EXECUTIVE WEEKLY UPDATES.  MM/DD/YY + Bullet format required.  Please provide  Executive Level accomplishments for your account. 
If more than 1 Accomplishment, please number.  If no content for the week, use N/A.</description>
        <inlineHelpText>THIS IS BEING USED FOR EXECUTIVE WEEKLY UPDATES.  MM/DD/YY + Bullet format required.  Please provide  Executive Level accomplishments for your account
If more than 1 Accomplishment, please number.  If no content for the week, use N/A.</inlineHelpText>
        <label>Accomplishments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_History__c</fullName>
        <description>Bullet(s) based on SDM knowledge</description>
        <inlineHelpText>Bullet(s) based on SDM knowledge</inlineHelpText>
        <label>Account History</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_Name_Value__c</fullName>
        <formula>Account_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account_Name_Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Master customer linked to customer contract.</description>
        <inlineHelpText>Matches P&amp;L Customer Name</inlineHelpText>
        <label>Master Customer Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CRMDB</relationshipLabel>
        <relationshipName>Customer_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_State__c</fullName>
        <description>Select from Green, Yellow, Red (see AUSE process)</description>
        <inlineHelpText>Select from Green, Yellow, Red (see Executive Summary Process)</inlineHelpText>
        <label>Account State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                    <color>#FF0000</color>
                    <label>Red</label>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                    <color>#FFFF66</color>
                    <label>Yellow</label>
                </value>
                <value>
                    <fullName>Green</fullName>
                    <color>#33FF33</color>
                    <label>Green</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Active_Customer__c</fullName>
        <description>Is this customer live (Day 2)?</description>
        <inlineHelpText>Is this customer live (Day 2)? Drop down options:  
Yes
Yes-pending disconnect
No-disconnected
No-pending activation"</inlineHelpText>
        <label>Active Contract</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Yes-pending disconnect</fullName>
                </value>
                <value>
                    <fullName>No-disconnected</fullName>
                    <label>No-disconnected (No longer a CMS Customer)</label>
                </value>
                <value>
                    <fullName>No – Contract Expired (Other Active CMS Contracts)</fullName>
                </value>
                <value>
                    <fullName>No-pending activation</fullName>
                </value>
                <value>
                    <fullName>No-disconnected (No longer a CMS Customer)</fullName>
                    <isActive>false</isActive>
                    <label>No-disconnected (No longer a CMS Customer)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Adopt__c</fullName>
        <label>Adopt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_CMS_Contract_Value_CR_S__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Child Record is the sum of  Annual CMS Contract + Annual CRs,  Parent Record is the Sum of all Child record(s) Annual Contract+CRs.</description>
        <inlineHelpText>Child Record is the sum of  Annual CMS Contract + Annual CRs,  Parent Record is the Sum of all Child record(s) Annual Contract+CRs.</inlineHelpText>
        <label>Annual CMS Contract Value + CR(S)($000)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_CMS_Contract_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Loaded from  Booked Qualification in a Child Record, Summed from Child record(s) to a Parent.</description>
        <inlineHelpText>Loaded from  Booked Qualification in a Child Record, Summed from Child record(s) to a Parent.</inlineHelpText>
        <label>Annual CMS Contract Value($000)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Child_CMS_CR__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Summation of child's Annual_CMS_Contract_Value_CR_S__c  value</description>
        <inlineHelpText>Child Record is the sum of Annual Contract CRs, Parent Record is the Sum of CRs for all children.</inlineHelpText>
        <label>Annual Customer CR(s) Value($000)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Revenue_FY_to_date__c</fullName>
        <description>Found in Tableau, should include FY to date</description>
        <inlineHelpText>Found in Tableau, should include FY to date</inlineHelpText>
        <label>Annual Revenue (FY to date)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Background_of_Accomplishment_or_Challeng__c</fullName>
        <description>THIS IS BEING USED FOR EXECUTIVE WEEKLY UPDATES.  MM/DD/YY+ Bullet format required.  What is the background of the Accomplishment or Challenge? Please identify the background for EACH Accomplishment or Challenge. i.e. Accomplishment #1, Challenge #1.  If no Accomplishments or Challenges for the week, use N/A.</description>
        <inlineHelpText>THIS IS BEING USED FOR EXECUTIVE WEEKLY UPDATES.  MM/DD/YY+ Bullet format required. Please identify the background for EACH Accomplishment or Challenge. i.e. Accomplishment #1, Challenge #1.  If no Accomplishments or Challenges for the week, use N/A.</inlineHelpText>
        <label>Background of Accomplishments/Challenges</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Brief_Summary_for_Red_Yellow_Status__c</fullName>
        <description>Provide a brief bulleted summary of Yellow or Red status</description>
        <label>Brief Summary for Yellow / Red Status</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CALC_20_wk_per_Region__c</fullName>
        <description>locked cell - autocalculated: add 20min per week per geograhic customer region (e.g. AMER, EMEAR, APJC)
IF(Regions__c&gt; 1, Regions__c* 20, 0)</description>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CALC - 20'/wk per Region</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CALC_ADOPT_Phase_effort_post_Activate__c</fullName>
        <description>locked cell - autocalcutaed: depending on the Activation and go-live time elapes, returns "Not Live" or "NEW" if within 90 days after go-live or "MATURE" if live since mofre than 90 days after activation</description>
        <formula>IF(CALC_Days_Since_Live__c = 0, "Not-Live", IF(CALC_Days_Since_Live__c &lt; 90, "New", "Mature"))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CALC - ADOPT Phase effort post-Activate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CALC_AUSE_Status_Flag__c</fullName>
        <description>locked cell - autocalculated: additional effort per week per Account State (GREEN=45min, YELLOW=90min, RED=240min)</description>
        <formula>IF(ISPICKVAL(Account_State__c ,"Green"), 45, (IF(ISPICKVAL(Account_State__c, "Yellow"), 90, (IF(ISPICKVAL(Account_State__c,"Red"), 240, 0)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CALC-AUSE Status Flag</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CALC_Active_or_pending_Activation__c</fullName>
        <description>locked cell - autocalculated: Multiplier: "Active" or "Pending-Activation" means 100% SDM attention (1.0), when "Pending Disconnect", there still 10% SDM attention required (0.1)</description>
        <formula>IF(ISPICKVAL(Active_Customer__c,"Yes"), 1, (IF(ISPICKVAL(Active_Customer__c,"No-Pending Disconnect"), 0.1, (IF(ISPICKVAL(Active_Customer__c,"No-Pending Activation"), 1, (IF(ISPICKVAL(Active_Customer__c,"No-Disconnected"), 0,0)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CALC-Active or pending Activation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CALC_CAP_Effort_week__c</fullName>
        <description>locked cell - autocalculated: calculates the effort per CAP case type per week: CAP-A = 120min, CAP-B = 60min, CAP-M = 30min</description>
        <formula>IF(ISPICKVAL(Is_Customer_on_CAP__c,"CAP - A"), 120,
(IF(ISPICKVAL(Is_Customer_on_CAP__c,"CAP - B"),60, 
(IF(ISPICKVAL(Is_Customer_on_CAP__c,"CAP - M"),30,0)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CALC- CAP Effort / week</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CALC_CRs_Complex_week__c</fullName>
        <description>locked cell - autocalculated: add 120min per week (2h) per complex Contract Change Request the SDM works on</description>
        <formula>Open_CONTRACT_CRs_Complex__c* 120</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CALC-CRs Complex /week</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CALC_CRs_Simple_week__c</fullName>
        <description>locked cell - autocalculated: add 20min per simple Contract Change Request the SDM works on</description>
        <formula>Open_CONTRACT_CRs_Simple__c* 20</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CALC-CRs Simple /week</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CALC_Days_Since_Live__c</fullName>
        <description>locked cell - autocalculated: number of days elapsed since Service Transition Date Go-Live Date</description>
        <formula>CALC_TODAY__c - Service_Transition_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CALC - Days Since Live</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CALC_Direct_Indirect_Sales__c</fullName>
        <description>locked cell - autocalculated: adding 45min per week if partner (integrator like BT, Accenture)  is our customer. additional effort from meetings which require further clarifications from partner and end customer</description>
        <formula>IF(ISPICKVAL(Direct_Indirect_Sales__c,"N/A - Cisco Direct"), 0, 45)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CALC-Direct /Indirect Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CALC_Effort_for_ADOPT_phase__c</fullName>
        <description>locked cell - autocalculated: reflects the additional effort after go-live during the ADOPT phase with 120min</description>
        <formula>IF(AND(CALC_ADOPT_Phase_effort_post_Activate__c = "New", ISPICKVAL(Active_Customer__c,"Yes"), CALC_RENEW__c = "N"), 120, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CALC- Effort for ADOPT phase</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CALC_Emerging_Technologies_Multiplier__c</fullName>
        <description>locked cell - autocalculated: add 30min per week if we deliver an Emerging Technology</description>
        <formula>IF(ISPICKVAL(Emerging_Technology__c,"N"), 0, 30)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CALC - Emerging Technologies Multiplier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CALC_Meetings_45_per_mtg_week__c</fullName>
        <description>locked cell - autocalculated: 45min per week per regular/adhoc meeting with customer, Integrator or internal</description>
        <formula>Number_of_Scheduled_Meetings_per_Week__c * 45</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CALC-Meetings (45' per mtg /week)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CALC_NOC_Multiplier__c</fullName>
        <description>locked cell - autocalculated: add 15min per week for each NOC involved in the delivery</description>
        <formula>Delivery_NOC_Count__c * 15</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CALC-NOC Multiplier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CALC_Offer_Level_Complexity_Multiplier__c</fullName>
        <description>locked cell - autocalculated: calculates offer complexity: for each selected offer level as per dropdown, # of minutes considered</description>
        <formula>IF( ISPICKVAL(Offer_Level__c,"Std Foundation"), 15,(IF(ISPICKVAL(Offer_Level__c,"Std Standard"),30,(IF(ISPICKVAL(Offer_Level__c,"Std Comprehensive"),60,(IF(ISPICKVAL(Offer_Level__c,"Custom off Standard Base - b/w 20% to 80% Custom"), 120, (IF(ISPICKVAL(Offer_Level__c,"Bespoke - &gt; 80% Custom"), 120,(IF(ISPICKVAL(Offer_Level__c,"Legacy SKUs"), 30, 0)))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CALC-Offer Level Complexity Multiplier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CALC_Partner_Delivered__c</fullName>
        <description>locked cell - autocalculated: if Partner delivered, then remove # of SDM. Not always mean smaller effort for the SDMs. Sometimes it requires more involvement.</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>IF(ISPICKVAL(Who_Delivers_Service__c ,"Cisco Only"), 0, 60)</inlineHelpText>
        <label>CALC-Partner Delivered</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CALC_Platform_Complexity_Multiplier__c</fullName>
        <description>locked cell - autocalculated: Adds a Delivery Model complexity multiplier if we have &gt;1 "NOC" AND "Emerging Technology" AND &gt; 1 Region. Introduced on R. Scott's request</description>
        <formula>IF(AND(CALC_20_wk_per_Region__c &gt; 10, CALC_Emerging_Technologies_Multiplier__c &gt; 20, CALC_NOC_Multiplier__c &gt; 16), 30, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CALC-Platform Complexity Multiplier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CALC_Platform_Multiplier__c</fullName>
        <description>locked cell - autocalculated: add 10min additional effort per week for each platform in use</description>
        <formula>Platform_Count__c * 10</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CALC-Platform Multiplier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CALC_Projects_Effort_Multiplier__c</fullName>
        <description>locked cell - autocalculated: per "Project", we add 60min per week</description>
        <formula>Projects_On_going_Count__c * 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CALC-Projects Effort Multiplier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CALC_RENEW__c</fullName>
        <description>locked cell - autocalculated: flags "Y" or "N" if contract has reached the 180 days renewal activity period</description>
        <formula>IF(CALC_Renew_Days__c &gt;180, "N", "Y")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CALC-RENEW</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CALC_Renew_Days__c</fullName>
        <description>locked cell - autocalculated: calculates the number of days left from today until "Renewal Date"</description>
        <formula>Contract_Renewal_Date__c - CALC_TODAY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CALC-Renew Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CALC_Renewal_Effort_Value__c</fullName>
        <description>locked cell - autocalculated: add 240min per week (4h) for each renewal the SDM works on</description>
        <formula>IF(CALC_RENEW__c = "Y", 240, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CALC-Renewal Effort Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CALC_SDM_Percentage_per_WebQT__c</fullName>
        <description>locked cell - autocalculated: SDM effort in % of FTE dependant on Annual $ volume of contract (CMS ACV). This is used to show the "as-sold" effort
IF(Annual_CMS_Contract_Value__c	 &lt; 1, 0, (IF(Annual_CMS_Contract_Value__c	 &lt; 500000, 12.5, (IF(AND(Annual_CMS_Contract_Value__c	 &gt; 500000, Annual_CMS_Contract_Value__c	 &lt; 5000000), 25, (IF(AND(Annual_CMS_Contract_Value__c	 &gt; 5000000, Annual_CMS_Contract_Value__c	 &lt; 10000000), 50, (IF(AND(Annual_CMS_Contract_Value__c	 &gt; 10000000, Regions__c = 2), 125, (IF(AND(Annual_CMS_Contract_Value__c	 &gt; 10000000, Regions__c = 3), 150, (IF(AND(Annual_CMS_Contract_Value__c	 &gt; 10000000, Regions__c = 4), 175, (IF(AND(Annual_CMS_Contract_Value__c	 &gt; 10000000, Regions__c = 5), 200, (IF(AND(Annual_CMS_Contract_Value__c	 &gt; 10000000, Regions__c = 6), 225, (IF(Annual_CMS_Contract_Value__c	 &gt; 10000000, 100, 0))))))))))))))))))) / 100</description>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CALC-SDM Percentage per WebQT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CALC_TODAY__c</fullName>
        <description>locked cell - autocalculated: returns value for today's date</description>
        <formula>Today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CALC-TODAY</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CALC_Total_SDM_Delivered__c</fullName>
        <description>locked cell - autocalculated: calculates the total effort of all minutes in row 19-36 and returns value in total % utilisation per week for all ACTIVE contracts</description>
        <formula>CALC_Total_SDM_Hours_Delivered__c / 30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CALC- Total SDM % Delivered</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CALC_Total_SDM_Hours_Delivered__c</fullName>
        <description>CALC-Total SDM Hours Delivered</description>
        <formula>(CALC_20_wk_per_Region__c + CALC_Transition_effort_for_complex_or_si__c) / 60 * CALC_Active_or_pending_Activation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CALC-Total SDM Hours Delivered</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CALC_Transition_effort_for_complex_or_si__c</fullName>
        <description>locked cell - autocalculated: add 300min (5h) per week for simple transition support (meetings, escalations) and 600min for complex</description>
        <formula>IF(ISPICKVAL(Active_Customer__c,"Yes"), 0, (IF(ISPICKVAL(Type_of_Transition__c,"Complex"), 600, (IF(ISPICKVAL(Type_of_Transition__c,"Simple"), 300, (IF(ISPICKVAL(Type_of_Transition__c,"None"), 0, 0)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CALC-Transition effort of complex/simple</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CAP_Case_Opened_Date__c</fullName>
        <description>This is provided by the CAP manager and entered into the CRMDB by the SDM</description>
        <inlineHelpText>This is provided by the CAP manager and entered into the CRMDB by the SDM</inlineHelpText>
        <label>CAP Case Opened Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CAP_Title__c</fullName>
        <description>This is provided by the CAP manager and entered into the CRMDB by the SDM</description>
        <inlineHelpText>This is provided by the CAP manager and entered into the CRMDB by the SDM</inlineHelpText>
        <label>CAP Title</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAP_case_Manager_Name__c</fullName>
        <description>This is provided by the CAP manager and entered into the CRMDB by the SDM</description>
        <inlineHelpText>This is provided by the CAP manager and entered into the CRMDB by the SDM</inlineHelpText>
        <label>CAP Case Manager Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAP_case_Number_Engagement_ID__c</fullName>
        <description>This is provided by the CAP manager and entered into the CRMDB by the SDM</description>
        <inlineHelpText>This is provided by the CAP manager and entered into the CRMDB by the SDM</inlineHelpText>
        <label>CAP Case Number (Engagement ID)</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMO_Assigned_for_Billing_Reporting__c</fullName>
        <description>CMO Assigned for Billing Reporting</description>
        <inlineHelpText>Provided by CMO</inlineHelpText>
        <label>CMO Assigned for Billing/Reporting</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMO_Assigned_for_MSR__c</fullName>
        <description>CMO Assigned for MSR</description>
        <inlineHelpText>Provided by CMO</inlineHelpText>
        <label>CMO Assigned for MSR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMO_Billing_Effort__c</fullName>
        <description>CMO Billing % Effort</description>
        <label>CMO Billing % Effort</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMO_MSR_Effort__c</fullName>
        <description>CMO MSR % Effort</description>
        <label>CMO MSR % Effort</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMSP_Migration_Date__c</fullName>
        <description>CMSP Migration Date</description>
        <label>CMSP Migration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>C_NOC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Accounts managed by Kurt Hauser's Team, updated by CET Chief of Staff (CoS)</description>
        <inlineHelpText>Accounts managed by Kurt Hauser's Team, updated by CET Chief of Staff (CoS)</inlineHelpText>
        <label>C-NOC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Challenges__c</fullName>
        <description>THIS IS BEING USED FOR EXECUTIVE WEEKLY UPDATES.  MM/DD/YY + Bullet format required.  Please provide  Executive Level Challenges for your account. 
If more than 1 Challenge, please number.  If no content for the week, use N/A.</description>
        <inlineHelpText>THIS IS BEING USED FOR EXECUTIVE WEEKLY UPDATES.  MM/DD/YY + Bullet format required.  Please provide  Executive Level Challenges for your account
If more than 1 Challenge, please number.  If no content for the week, use N/A.</inlineHelpText>
        <label>Challenges</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commercial_Summary__c</fullName>
        <description>Term(s) 
Where we are in the length of the term(s) 
Termination / Transfer Obligations 
Renewal Obligations 
Billing 
Custom Reporting / Other reporting obligations 
Summary of Other Cisco Services (AS/TS)</description>
        <inlineHelpText>Term(s)
Where we are in the length of the term(s)
Termination / Transfer Obligations
Renewal Obligations
Billing
Custom Reporting / Other reporting obligations
Summary of Other Cisco Services (AS/TS)</inlineHelpText>
        <label>Commercial Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Renewal_Date__c</fullName>
        <description>Please enter the contract renewal date (initially entered by Admin)</description>
        <inlineHelpText>Please enter the contract renewal date (initially entered by Admin)</inlineHelpText>
        <label>Contract Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Term_Months__c</fullName>
        <description>Term in number of months (Locked field, entered by the CRMDB Admin.  Please submit requests for changes in the CRMDB Admin Spark room.  You will receive a response upon completion.)</description>
        <inlineHelpText>Term in # of months</inlineHelpText>
        <label>Contract Term Months</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_Blank_Cells__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count Blank Cells</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Countries_Served__c</fullName>
        <description>Countries Served</description>
        <inlineHelpText>The number of countries the customer does business in.</inlineHelpText>
        <label>Countries Served</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Crisis_Management__c</fullName>
        <defaultValue>"Primary:      Name           Title       email    Work phone      Cell Phone"  &amp; BR() &amp; "Secondary: Name            Title       email    Work phone      Cell Phone"</defaultValue>
        <description>Please move all your Crisis Management contacts to the new Crisis Management Contacts tool and stop entering contact information in this field.</description>
        <inlineHelpText>Please move all your Crisis Management contacts to the new Crisis Management Contacts tool and stop entering contact information in this field.</inlineHelpText>
        <label>Crisis Mgmt - WILL BE DELETED on 4/26</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Executive_Summary__c</fullName>
        <description>THIS IS BEING USED FOR EXECUTIVE MONTHLY REVIEWS. MM/DD/YY + Bullet format required.  This is your opportunity to provide your leader a HIGH LEVEL Executive Briefing /Situation Summary for your Customer. What should your leader know if there was an escalation or Customer inquiry?</description>
        <inlineHelpText>THIS IS BEING USED FOR EXECUTIVE MONTHY REVIEWS. MM/DD/YY + Bullet format required. What should your leader know if there was an escalation or Customer inquiry?</inlineHelpText>
        <label>Customer Executive Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Sentiment__c</fullName>
        <description>Bullet(s) describing customer sentiment</description>
        <inlineHelpText>Bullet(s) describing customer sentiment</inlineHelpText>
        <label>Customer Sentiment</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Website__c</fullName>
        <description>Customer Website</description>
        <label>Customer Website</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customers__c</fullName>
        <description>Customers</description>
        <label>Customers</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DID__c</fullName>
        <description>Deal ID for your customer's contract (can be obtained from Finance, SKU-Active or SOW. (Locked field, entered by the CRMDB Admin.  Please submit requests for changes in the CRMDB Admin Spark room.  You will receive a response upon completion.)</description>
        <inlineHelpText>Deal ID for your customer's contract (can be obtained from Finance, SKU-Active or SOW)</inlineHelpText>
        <label>DID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Customer_first_became_CMS_Customer__c</fullName>
        <description>The date of the first CMS contract</description>
        <inlineHelpText>The date of the first CMS contract</inlineHelpText>
        <label>Date Customer first became  CMS Customer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_NOC_Count__c</fullName>
        <description># of NOCs that are delivering service to this Customer (i.e. TP, DCOT, SFNOC, SOC, ect...)</description>
        <inlineHelpText># of NOCs that are delivering service to this Customer (i.e. TP, DCOT, SFNOC, SOC, ect...)</inlineHelpText>
        <label>Delivery NOC Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Device_Count__c</fullName>
        <description>Number of devices under CMS management as reported by the platform.</description>
        <inlineHelpText># of devices under CMS management as reported by the platform</inlineHelpText>
        <label>Device Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Direct_Indirect_Sales__c</fullName>
        <description>Direct / Indirect Sales</description>
        <inlineHelpText>Select 3rd party integrator, if applicable</inlineHelpText>
        <label>Direct / Indirect Sales</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A - Cisco Direct</fullName>
                </value>
                <value>
                    <fullName>Accenture</fullName>
                </value>
                <value>
                    <fullName>CDW</fullName>
                </value>
                <value>
                    <fullName>Dimension Data</fullName>
                </value>
                <value>
                    <fullName>AT&amp;T</fullName>
                </value>
                <value>
                    <fullName>Rocket IT</fullName>
                </value>
                <value>
                    <fullName>EPLUS</fullName>
                </value>
                <value>
                    <fullName>BT</fullName>
                </value>
                <value>
                    <fullName>Verizon</fullName>
                </value>
                <value>
                    <fullName>Yokogowa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disconnect_Date__c</fullName>
        <description>Disconnect Date</description>
        <label>Disconnect Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Emerging_Technology__c</fullName>
        <description>Emerging Technology</description>
        <label>Emerging Technology</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employees__c</fullName>
        <description>Employees</description>
        <label>Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expand__c</fullName>
        <label>Expand</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>